# MxwAgent

./: .gitignore  README.md  pyproject.toml
pimo-agent-core/: pyproject.toml
pimo-agent-core/src/pimo/agent_core/: __init__.py  types.py
pimo-ai/: pyproject.toml
pimo-ai/src/pimo/ai/: __init__.py  api_registry.py  env_api_keys.py  event_stream.py  types.py
pimo-ai/src/pimo/ai/models/: __init__.py  cost.py  generated.py  registry.py
pimo-ai/src/pimo/ai/providers/: anthropic.py  faux.py  openai_completions.py  openai_responses.py  openai_responses_shared.py  register_builtins.py  simple_options.py  transform_messages.py
pimo-ai/src/pimo/ai/utils/: abort_signals.py  hash.py  json_parse.py  overflow.py  sanitize_unicode.py  validation.py
pimo-coding-agent/: pyproject.toml
pimo-coding-agent/src/pimo/coding_agent/: __init__.py
pimo-tui/: pyproject.toml
pimo-tui/src/pimo/tui/: __init__.py
scripts/: generate_models.py  release.py
tests/: __init__.py
