# MxwAgent uv workspace 根配置
# 本文件不定义 [project] — 根目录不是 Python 包，只做 workspace 编排

[tool.uv.workspace]
members = ["pimo-ai", "pimo-agent-core", "pimo-coding-agent", "pimo-tui"]

# 共享开发依赖 — 所有 workspace 成员可用
[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
