[project]
name = "pimo-ai"
version = "0.1.0"
description = "Pimo LLM 抽象层 — 多 Provider 统一 API、流式事件、模型注册表"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
